# shoogle

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  pyproject.toml
examples/B1957+20/: B1957+20_GPTA_DR1_wcut.fits  B1957+20_shoogle_input.par  B1957+20_shoogle_input.priors  B1957+20_shoogle_input.prof  RunB1957.ipynb
examples/J1526-2744/: J1526-2744.par  J1526-2744_gtsrcprob_cut.fits  J1526-2744_template.txt  run_shoogle_J1526.sh
src/shoogle/: conditional_samplers.py  gibbs_sampler.py  noise_models.py  pb_tasc_from_orbifunc.py  pint_fold.py  plot_gibbs_results.py  prepare_gibbs_input.py  utils.py
src/shoogle/scripts/: plot_shoogle.py  run_shoogle.py
